--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,204 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+	<head>
+		<meta charset="utf-8" />
+		<title>歪创科技</title>
+		<link rel="stylesheet" type="text/css" href="/css/conmm.css" />
+		<script src="/js/jquery.min.js"></script>
+		<script src="/js/jquery.vticker.js" type="text/javascript" charset="utf-8"></script>
+	</head>
+
+	<body>
+		<div id="header" class="scrolltop">
+			<div class="header clearfix">
+				<div class="logo"><img src="/img/logo.jpg"></div>
+				<ul class="nav clearfix">
+					<li class="current"><a href="#">首页</a></li>
+					<li>
+						<a href="#">服务<span class="arrow"></span></a>
+						<ul class="secondmenu">
+							<li><a>123354545</a></li>
+							<li><a>123354545</a></li>
+							<li><a>123354545</a></li>
+						</ul>
+					</li>
+					<li><a href="#">资讯</a></li>
+					<li><a href="#">活动</a></li>
+					<li><a href="#">干货</a></li>
+					<li><a href="#">直播</a></li>
+				</ul>
+				<div class="phone">021-456789456</div>
+			</div>
+		</div>
+
+		<!-- 轮播图  S  -->
+		<div class="flexslider">
+			<ul class="slides">
+				<li style="background:url(/img/banner.jpg) center 0 no-repeat;">
+					<a href="#"></a>
+				</li>
+				<li style="background:url(/img/banner.jpg) center 0 no-repeat;">
+					<a href="#"></a>
+				</li>
+				<li style="background:url(/img/banner.jpg) center 0 no-repeat;">
+					<a href="#"></a>
+				</li>
+				<li style="background:url(/img/banner.jpg) center 0 no-repeat;">
+					<a href="#"></a>
+				</li>
+				<li style="background:url(/img/banner.jpg) center 0 no-repeat;">
+					<a href="#"></a>
+				</li>
+				<li style="background:url(/img/banner.jpg) center 0 no-repeat;">
+					<a href="#"></a>
+				</li>
+			</ul>
+		</div>
+		<script src="/js/jquery.flexslider-min.js" type="text/javascript" charset="utf-8"></script>
+		<!-- 轮播图  E  -->
+		<div class="main_top clearfix">
+			<div class="aboutus">
+				<div class="title">公司简介</div>
+				<div class="content">
+					<div class="article">
+						<p>7日，美国大选初选将迎来收官之战，票仓加利福尼亚会官之战，票仓加利福尼亚会压轴登场。</p>
+						<p>目前，共和党方面选情明朗，特朗普作为唯一仍在初选的党内参选人，几乎笃定成为提名候选人。民主党方面，希拉里依然保持较大领先优势，民调也显示希拉里在收官之战中获胜几率较大。同时，桑德斯仍在最后一搏，且不能排除独立参选的可能性，那将造成鹬蚌相争特朗普得利的局面。</p>
+						<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
+					</div>
+					<div class="more"><a href="">查看更多&gt;</a></div>
+				</div>
+			</div>
+			<div class="news">
+				<div class="title">最新资讯</div>
+				<div class="content clearfix">
+					<div class="list" id="scroller">
+						<ul>
+							<li>
+								<div class="img">
+									<a href=""><img src="/img/news1.jpg"></a>
+								</div>
+								<div class="listtit">
+									<a href="">
+										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
+										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
+										<div><span>2016-6-8</span></div>
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<a href=""><img src="/img/news1.jpg"></a>
+								</div>
+								<div class="listtit">
+									<a href="">
+										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
+										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
+										<div><span>2016-6-8</span></div>
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<a href=""><img src="/img/news1.jpg"></a>
+								</div>
+								<div class="listtit">
+									<a href="">
+										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
+										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
+										<div><span>2016-6-8</span></div>
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<a href=""><img src="/img/news1.jpg"></a>
+								</div>
+								<div class="listtit">
+									<a href="">
+										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
+										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
+										<div><span>2016-6-8</span></div>
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<a href=""><img src="/img/news1.jpg"></a>
+								</div>
+								<div class="listtit">
+									<a href="">
+										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
+										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
+										<div><span>2016-6-8</span></div>
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<a href=""><img src="/img/news1.jpg"></a>
+								</div>
+								<div class="listtit">
+									<a href="">
+										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
+										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
+										<div><span>2016-6-8</span></div>
+									</a>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<div class="main_bottom">
+			<div class="title"><p><span>项目展示</span></p></div>
+			<div class="subtitle">眼见为实，我的做的每一份都有记录，让客户亲眼见证质量，不忘初心的企业理念</div>
+			<ul class="product clearfix">
+				<li>
+					<div class="img">
+						<img src="/img/product.jpg" />
+					</div>
+					<div class="abs">
+						1255
+					</div>
+				</li>
+			</ul>
+		</div>
+		<div id="footer">
+			<div class="footer clearfix">
+				<div class="left">
+					<p><a href="#">联系我们</a> <span></span> <a href="#">伙伴加入 </a> <span></span> <a href="#"> 管理团队</a> <span></span> <a href="#">品牌合作</a></p>
+					<p>Copyright ©360.cn. All Rights Reserved. </p>
+				</div>
+				<div class="center"><img src="/img/f_logo.png"></div>
+				<div class="right">
+					<img src="/img/code.jpg" />
+					<img src="/img/code.jpg" />
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript">
+			$(document).ready(function() {
+				//焦点图
+				$('.flexslider').flexslider({
+					directionNav: true,
+					pauseOnAction: false
+				});
+				//滚动新闻
+				$('#scroller').vTicker({
+					speed: 500, //滚动速度，单位毫秒。
+					pause: 3000, //暂停时间，就是滚动一条之后停留的时间，单位毫秒。
+					showItems: 2, //显示内容的条数。
+					animation: 'fade', //动画效果，默认是fade，淡出，不想要就删除，硬切。
+					mousePause: true, //鼠标移动到内容上是否暂停滚动，默认为true。
+					height: 250, //滚动内容的高度。
+					direction: 'up' //滚动的方向，默认为up向上，down则为向下滚动。
+				});
+			});
+		</script>
+
+	</body>
+
 </html>
