--- a/public/css/conmm.css
+++ b/public/css/conmm.css
@@ -22,63 +22,62 @@ a {
   content: '';
 }
 #header {
-  height: 56px;
+  height: 87px;
+  position: relative;
+}
+#header #login_area {
+  position: absolute;
+  top: 0;
+  right: 80px;
+}
+#header #login_area ul li {
+  display: inline-block;
+  line-height: 87px;
+  text-align: center;
+  padding: 0 5px;
+}
+#header #login_area ul li a {
+  font-size: 14px;
+  color: #3a3a3a;
+  line-height: 86px;
+  display: inline-block;
 }
 .header {
   position: relative;
   width: 1100px;
   margin: 0 auto;
+  height: 87px;
 }
 .header .logo {
+  padding-top: 23px;
   float: left;
-  padding-top: 10px;
 }
 .header .logo img {
-  height: 36px;
+  height: 50px;
   width: auto;
   display: block;
 }
-.header .nav li {
-  float: left;
-  position: relative;
-  line-height: 56px;
-  text-align: center;
-}
-.header .nav li a {
-  color: #474747;
-  display: block;
-  transition: all 0.384s ease-in;
-  height: 55px;
-  line-height: 55px;
-  font-size: 12px;
-  padding: 0 3px;
-  margin: 0 12px;
-}
-.header .nav li a .arrow {
-  background: url("../img/down.png") 0 0 no-repeat;
-  width: 13px;
-  height: 6px;
-  display: inline-block;
-  vertical-align: middle;
-  transition: all 0.384s ease-in;
-}
-.header .nav li a:hover .arrow {
-  transform: rotate(180deg);
-}
-.header .nav li.current > a {
-  color: #0077e0;
-  border-bottom: 2px solid #0077e0;
-  margin-bottom: -1px;
-}
 .header .phone {
   position: absolute;
-  right: 0;
-  line-height: 56px;
-  top: 0;
+  right: 0px;
+  top: 22px;
   color: #ff6700;
   font-size: 14px;
   background: url("../img/phone.png") no-repeat left center;
-  padding-left: 32px;
+  padding-left: 38px;
+}
+.header .phone .text {
+  font-size: 18px;
+  color: #34b3e0;
+}
+.header .phone p {
+  font-size: 13px;
+  color: #626262;
+}
+.sun {
+  position: absolute;
+  top: 0;
+  right: -82px;
 }
 .secondmenu {
   display: none;
@@ -101,7 +100,7 @@ a {
 }
 /*焦点图 */
 .flexslider {
-  height: 414px;
+  height: 800px;
   position: relative;
 }
 .slides {
@@ -109,7 +108,7 @@ a {
   z-index: 1;
 }
 .slides li {
-  height: 550px;
+  height: 800px;
 }
 .slides li a {
   display: block;
@@ -306,15 +305,16 @@ a {
   vertical-align: middle;
 }
 .main_bottom .title p:after {
-  background: url(../img/right_ico.jpg) no-repeat;
+  background: url("../img/right_ico.jpg") no-repeat;
 }
 .main_bottom .title p:before {
-  background: url(../img/left_ico.jpg) no-repeat;
+  background: url("../img/left_ico.jpg") no-repeat;
 }
 .main_bottom .subtitle {
   color: #8a8a8a;
   font-size: 14px;
   text-align: center;
+  padding: 30px 0 40px;
 }
 .product li {
   position: relative;
@@ -335,6 +335,7 @@ a {
 }
 #footer {
   background: url("../img/footerbg.png") no-repeat center bottom;
+  margin-top: 55px;
 }
 .footer {
   width: 1100px;
@@ -347,8 +348,15 @@ a {
   width: 425px;
   color: #fff;
 }
+.footer .left p {
+  font-size: 14px;
+  padding-top: 12px;
+}
 .footer .left a {
-  font-size: 12px;
+  font-size: 14px;
+  display: inline-block;
+  padding-right: 20px;
+  color: #fff;
 }
 .footer .center {
   float: left;
@@ -358,5 +366,146 @@ a {
   float: right;
   padding-top: 154px;
   width: 425px;
+  text-align: center;
+  font-size: 0;
 }
-/*# sourceMappingURL=conmm.css.map */
+.footer .right img {
+  width: 115px;
+  height: 115px;
+  padding-top: 32px;
+  display: inline-block;
+  vertical-align: middle;
+  padding-left: 12px;
+}
+.con ul li {
+  width: 245px;
+  height: 407px;
+  float: left;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  position: relative;
+  cursor: pointer;
+  border: 5px solid #eeeeee;
+  border-radius: 3px;
+  overflow: hidden;
+}
+.txt {
+  width: 245px;
+  height: 45px;
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  color: #fff;
+}
+.txt h3 {
+  font-size: 20px;
+  font-weight: 100;
+  height: 45px;
+  text-align: center;
+  line-height: 45px;
+}
+.txt p {
+  font-size: 14px;
+  text-align: center;
+}
+.nav {
+  margin-left: 56px;
+  float: left;
+}
+.nav li {
+  float: left;
+  width: 128px;
+  position: relative;
+}
+.nav li .arrow {
+  margin-left: 3px;
+  background: url("../img/down.png") 0 0 no-repeat;
+  width: 13px;
+  height: 6px;
+  display: inline-block;
+  vertical-align: middle;
+  transition: all 0.2s ease-in;
+}
+.nav li:hover .arrow {
+  transform: rotate(180deg);
+}
+.nav li a {
+  display: block;
+  height: 86px;
+  line-height: 86px;
+  font-size: 14px;
+  color: #3a3a3a;
+  width: 128px;
+  text-align: center;
+}
+.nav li a span {
+  display: inline-block;
+  padding: 0 6px;
+  cursor: pointer;
+}
+.nav li.selected .submenu {
+  display: block;
+}
+.nav li .selected2 span {
+  color: #0077E0;
+  border-bottom: 2px solid #0077e0;
+}
+.nav li .submenu {
+  width: 128px;
+  z-index: 9999;
+  display: none;
+  position: absolute;
+  top: 86px;
+  left: 0;
+  background-color: white;
+  width: 126px;
+  z-index: 999;
+  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.1);
+}
+.nav li .submenu li {
+  padding: 0;
+  height: 42px;
+  float: none;
+}
+.nav li .submenu li a {
+  padding: 0;
+  text-align: left;
+  background: none;
+  padding-left: 8px;
+  display: block;
+  color: #333;
+  line-height: 42px;
+}
+.nav li .submenu li a:hover {
+  color: #0077E0;
+}
+.hide_it {
+  display: none;
+}
+div.modal_backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: #000;
+  opacity: 0.75;
+}
+div.sign_in_up {
+  position: fixed;
+  background-color: #fff;
+  z-index: 10000;
+  width: 360px;
+  height: 360px;
+  padding-bottom: 30px;
+  left: 50%;
+  top: 50%;
+  margin: -180px 0 0 -180px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+  transition: all 0.2s;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -o-transition: all 0.2s;
+}
