alter index/index.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -242,7 +242,9 @@
 		<!-- 登录注册遮罩层 -->
 		<div class='modal_backdrop hide_it'></div>
 		<!-- 登录注册页 -->
-		<div class='sign_in_up hide_it'></div>
+		<div class='sign_in_up hide_it' id='sign_in_up'>
+			
+		</div>
 
 	</body>
 	<script src="js/jquery.flexslider-min.js" type="text/javascript" charset="utf-8"></script>
