add some banner jpg

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,13 @@
 							<li><a href="">关注贫困儿童</a></li>
 						</ul>
 					</li>
+					<li class="drop-menu-effect"><a href=""><span>直播<i class="arrow"></i></span></a>
+						<ul class="submenu">
+							<li><a href="">NBA直播</a></li>
+							<li><a href="">足球联赛直播</a></li>
+							<li><a href="">斯诺克直播</a></li>
+						</ul>
+					</li>
 				</ul>
 				<div class="phone">
 					<p class="text">4008-821-628</p>
@@ -72,19 +79,19 @@
 				<li style="background:url(img/banner.jpg) center 0 no-repeat;">
 					<a href="#"></a>
 				</li>
-				<li style="background:url(img/banner.jpg) center 0 no-repeat;">
+				<li style="background:url(img/banner1.jpg) center 0 no-repeat;">
 					<a href="#"></a>
 				</li>
-				<li style="background:url(img/banner.jpg) center 0 no-repeat;">
+				<li style="background:url(img/banner2.jpg) center 0 no-repeat;">
 					<a href="#"></a>
 				</li>
-				<li style="background:url(img/banner.jpg) center 0 no-repeat;">
+				<li style="background:url(img/banner7.png) center 0 no-repeat;">
 					<a href="#"></a>
 				</li>
-				<li style="background:url(img/banner.jpg) center 0 no-repeat;">
+				<li style="background:url(img/banner6.png) center 0 no-repeat;">
 					<a href="#"></a>
 				</li>
-				<li style="background:url(img/banner.jpg) center 0 no-repeat;">
+				<li style="background:url(img/banner5.jpg) center 0 no-repeat;">
 					<a href="#"></a>
 				</li>
 			</ul>
