--- a/public/less/common.less
+++ b/public/less/common.less
@@ -370,11 +370,22 @@ a {
             font-size: 14px;
             padding-top: 12px;
         }
+        p:first-child{
+            position: relative;
+        }
         a {
             font-size: 14px;
             display: inline-block;
             padding-right: 20px;
             color: #fff;
+        }
+        .contact-us{
+            position: absolute;
+            background-color: #fff;
+            left: -60px;
+            top: -60px;
+            padding: 15px 15px;
+            color: #000;
         }
         color: #fff;
     }
