--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,75 +4,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>歪创科技</title>
-		<link rel="stylesheet" type="text/css" href="css/conmm.css" />
+		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.vticker.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 
 	<body>
-		<div id="header" class="scrolltop">
-			<div class="header clearfix">
-				<div class="logo"><img src="img/logo.jpg"></div>
-				<ul class="nav clearfix">
-					<li class="drop-menu-effect"><a href="" class="selected2"><span>首页</span></a></li>
-					<li class="drop-menu-effect"><a href=""><span>服务<i class="arrow"></i></span></a>
-						<ul class="submenu">
-							<!--平台建设、软件开发、APP设计、全网营销-->
-							<li><a href="#">平台建设</a></li>
-							<li><a href="#">软件开发</a></li>
-							<li><a href="#">APP设计</a></li>
-							<li><a href="#">全网营销</a></li>
-						</ul>
-					</li>
-					<li class="drop-menu-effect"><a href=""><span>资讯<i class="arrow"></i></span></a>
-						<!--前沿、公告-->
-						<ul class="submenu">
-							<li><a href="#">前沿</a></li>
-							<li><a href="#">公告</a></li>
-
-						</ul>
-					</li>
-					<li class="drop-menu-effect"><a href=""><span>干货<i class="arrow"></i></span></a>
-						<ul class="submenu">
-							<li><a href="#">案例</a></li>
-							<li><a href="#">合作</a></li>
-
-						</ul>
-					</li>
-					<li class="drop-menu-effect"><a href=""><span>活动<i class="arrow"></i></span></a>
-						<!--<ul class="submenu">
-							<li><a href="">直播</a></li>
-							<li><a href="">公司企业文化讲解</a></li>
-							<li><a href="">关注贫困儿童</a></li>
-						</ul>-->
-					</li>
-					<li class="drop-menu-effect"><a href=""><span>直播<i class="arrow"></i></span></a>
-						<!--<ul class="submenu">
-							<li><a href="">NBA直播</a></li>
-							<li><a href="">足球联赛直播</a></li>
-							<li><a href="">斯诺克直播</a></li>
-						</ul>-->
-					</li>
-				</ul>
-				<div class="phone">
-					<p class="text">4008-821-628</p>
-					<p>只做您想要的！</p>
-				</div>
-				<div class="sun"><img src="img/sun.png"></div>				
-			</div>
-			<div id="login_area hide">
-				<ul class="header_unlogin clearfix">
-				    <li class="header_signin">
-				        <a href="javascript:void(0)" id="signin_btn">登录</a>
-				    </li>
-				    <li class="header_signup">
-				        <a href="javascript:void(0)" id="signup_btn">注册</a>
-				    </li>
-				</ul>
-	        </div>
-			
-		</div>
+		<% include header.ejs%>
 
 		<!-- 轮播图  S  -->
 		<div class="flexslider">
@@ -107,11 +46,8 @@
 						<p>深圳歪创网络科技有限公司，简称歪创科技(<a href="http://www.yycon.cn">www.yycon.cn</a>)，是国内极具创新的互联网综合运营服务提供商，歪创科技是致力于网络应用技术开发与服务、企业电子商务整体解决方案的高科技企业。经过长期的稳步发展，已成为华南地区网络应用技术服务的佼佼者，在业界拥有良好的口碑，公司致力于打造专业互联网营销服务商和分类信息服务平台，为竭力成为深圳乃至全国的品牌互联网公司而努力。</p>
 						<p>服务范围：网络营销及企业信息化整体解决方案，包括：域名注册、虚拟主机、主机托管、网站建设、系统软件开发、网络网站维护、网站推广、网站优化、网络广告、电子商务咨询、服务器租用及托管服务等，区域范围涉及全国。</p>
 						<p>合作伙伴：万网、长沙电信、深圳企业网、百度、众多金融企业等。</p>
-						<!--<p>企业优势：公司拥有国际国内领先的技术、完善的项目管理体系、质量管理体系和优秀的软硬件开发队伍（YCON TEAM；ISUNFIRE TEAM），以及专业的销售和服务团队，始终坚持“以客户为中心”的态度、以“互惠互利”为原则，以实际行动在深圳互联网界内赢得信任和美誉。</p>
-						<p>多年来,我们全心全意致力于品牌网站设计、系统软件开发、APP定制,在深圳互联网行业中有一定的知名度。我们拥有独立的高端服务器，提供从网站设计、网站推广、网络广告、软件定制及APP建设等互联网相关服务。网站设计案例涉及机械、医药、卫生、建筑、 IT 、纺织、娱乐、物流、咨询、房产、汽车等，从而积累了丰富的网络服务经验。</p>
-						<p>歪创随时欢迎您的咨询与合作，只做您想要的！愿大家能携手共进,创造出一个个辉煌。</p>-->
 					</div>
-					<div class="more"><a class="more-bussiness-intro" href="/bussiness_intro">查看更多&gt;</a></div>
+					<div class="more"><a class="more-bussiness-intro" href="/business">查看更多&gt;</a></div>
 				</div>
 			</div>
 			<div class="news">
@@ -201,57 +137,43 @@
 			<div class="title">
 				<p><span>项目展示</span></p>
 			</div>
-			<div class="subtitle">眼见为实，我的做的每一份都有记录，让客户亲眼见证质量，不忘初心的企业理念</div>
+			<div class="subtitle">眼见为实，我们做的每一份都有记录，让客户亲眼见证质量，不忘初心的企业理念</div>
 			<div class="con">
 				<ul class="clearfix">
 					<li>
 						<img src="img/pinghetangAPP.jpg" />
 						<div class="txt">
 							<h3>案例1</h3>
-							<p>为您铺就成为IT大神的在线学习之路</p>
+							<p>只做您想要的</p>
 						</div>
 					</li>
 					<li>
 						<img src="img/wochuAPP.png" />
 						<div class="txt">
 							<h3>案例2</h3>
-							<p>为您铺就成为IT大神的在线学习之路</p>
+							<p>只做您想要的</p>
 						</div>
 					</li>
 					<li>
 						<img src="img/yikaobangAPP.png" />
 						<div class="txt">
 							<h3>案例3</h3>
-							<p>为您铺就成为IT大神的在线学习之路</p>
+							<p>只做您想要的</p>
 						</div>
 					</li>
 					<li>
 						<img src="img/zhitianguijinsuAPP.png" />
 						<div class="txt">
 							<h3>案例4</h3>
-							<p>为您铺就成为IT大神的在线学习之路</p>
+							<p>只做您想要的</p>
 						</div>
 					</li>
 
 				</ul>
 			</div>
 		</div>
-		<div id="footer">
-			<div class="footer clearfix">
-				<div class="left">
-					<p><a href="#">联系我们</a> <span></span> <a href="#">伙伴加入 </a> <span></span> <a href="#"> 管理团队</a> <span></span> <a href="#">品牌合作</a></p>
-					<p>Copyright ©yycon.cn. All Rights Reserved. </p>
-				</div>
-				<div class="center"><img src="img/f_logo.png"></div>
-				<div class="right">
-					<img src="img/code.jpg" alt="关注歪创科技微信公众号，抢第一手资料" title="关注微信公众号，抢第一手资料"/>
-					<p class="img-code-desc">
-						<strong>歪创科技</strong><br />技术领先<br />品质保证
-					</p>
-					<!--<img src="img/code.jpg" />-->
-				</div>
-			</div>
-		</div>
+
+		<% include footer.ejs%>
 
 		<!-- 登录注册遮罩层 -->
 		<div class='modal_backdrop hide_it'></div>
@@ -280,5 +202,7 @@
 	</body>
 	<script src="js/jquery.flexslider-min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/index/index.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/header/index.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/footer/index.js" type="text/javascript" charset="utf-8"></script>
 
 </html>
