--- a/public/less/drycargo.less
+++ b/public/less/drycargo.less
@@ -21,7 +21,7 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: space-around;
+      justify-content: flex-start;
       .txt{
         p{
           color: #fff;
