--- a/public/css/common.css
+++ b/public/css/common.css
@@ -432,7 +432,7 @@ a {
   height: 407px;
 }
 .txt {
-  width: 245px;
+  width: 100%;
   height: 45px;
   background: rgba(0, 0, 0, 0.6);
   position: absolute;
