--- a/public/less/common.less
+++ b/public/less/common.less
@@ -436,7 +436,7 @@ a {
     }
 }
 .txt {
-    width: 245px;
+    width: 100%;
     height: 45px;
     background: rgba(0,0,0,0.6);
     position: absolute;
