--- a/public/css/drycargo.css
+++ b/public/css/drycargo.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .right-content .main_bottom .clearfix2 .txt p {
   color: #fff;
