--- a/routes/drycargo/drycargoInfo/cooperation.ejs
+++ b/routes/drycargo/drycargoInfo/cooperation.ejs
@@ -2,7 +2,7 @@
     <div class="title">
         <p><span>合作伙伴</span></p>
     </div>
-    <div class="subtitle">我们诚邀您，如他们一样，体验科匠中国的科技创新成果，感受移动互联魅力。</div>
+    <div class="subtitle">我们诚邀您，如他们一样，体验歪创的科技创新成果，感受移动互联魅力。</div>
     <div class="con">
         <ul class="clearfix2">
             <li>
