--- a/routes/drycargo/drycargoInfo/cooperation.ejs
+++ b/routes/drycargo/drycargoInfo/cooperation.ejs
@@ -6,58 +6,51 @@
     <div class="con">
         <ul class="clearfix2">
             <li>
-                <img src="img/pinghetangAPP.jpg" />
+                <img src="img/changshadianxin.png" />
                 <div class="txt">
-                    <h3>案例1</h3>
+                    <h3>长沙电信</h3>
                     <p></p>
                 </div>
             </li>
             <li>
-                <img src="img/wochuAPP.png" />
+                <img src="img/hedanyiyao.png" />
                 <div class="txt">
-                    <h3>案例2</h3>
+                    <h3>合丹医药</h3>
                     <p></p>
                 </div>
             </li>
             <li>
-                <img src="img/yikaobangAPP.png" />
+                <img src="img/jujiawuyou.png" />
                 <div class="txt">
-                    <h3>案例3</h3>
+                    <h3>居家无忧</h3>
                     <p></p>
                 </div>
             </li>
             <li>
-                <img src="img/zhitianguijinsuAPP.png" />
+                <img src="img/kong.png" />
                 <div class="txt">
-                    <h3>案例4</h3>
+                    <h3>滨州税务</h3>
                     <p></p>
                 </div>
             </li>
             <li>
-                <img src="img/548343850.jpg" />
+                <img src="img/shenzhendaxue.png" />
                 <div class="txt">
-                    <h3>案例5</h3>
+                    <h3>深圳大学</h3>
                     <p></p>
                 </div>
             </li>
             <li>
-                <img src="img/901980792.jpg" />
+                <img src="img/taikangrenshou.png" />
                 <div class="txt">
-                    <h3>案例6</h3>
+                    <h3>泰康人寿</h3>
                     <p></p>
                 </div>
             </li>
             <li>
-                <img src="img/1159633737.jpg" />
+                <img src="img/wanwang.png" />
                 <div class="txt">
-                    <h3>案例7</h3>
-                    <p></p>
-                </div>
-            </li>
-            <li>
-                <img src="img/1648526629.jpg" />
-                <div class="txt">
-                    <h3>案例8</h3>
+                    <h3>中国万网</h3>
                     <p></p>
                 </div>
             </li>
