--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,28 +143,28 @@
 					<li>
 						<img src="img/pinghetangAPP.jpg" />
 						<div class="txt">
-							<h3>案例1</h3>
+							<h3>掌尚平和堂</h3>
 							<p>只做您想要的</p>
 						</div>
 					</li>
 					<li>
 						<img src="img/wochuAPP.png" />
 						<div class="txt">
-							<h3>案例2</h3>
+							<h3>我厨App</h3>
 							<p>只做您想要的</p>
 						</div>
 					</li>
 					<li>
 						<img src="img/yikaobangAPP.png" />
 						<div class="txt">
-							<h3>案例3</h3>
+							<h3>微课堂</h3>
 							<p>只做您想要的</p>
 						</div>
 					</li>
 					<li>
 						<img src="img/zhitianguijinsuAPP.png" />
 						<div class="txt">
-							<h3>案例4</h3>
+							<h3>智天贵金属</h3>
 							<p>只做您想要的</p>
 						</div>
 					</li>
