--- a/public/less/common.less
+++ b/public/less/common.less
@@ -15,13 +15,12 @@ a {
 }
 .clearfix {
     zoom: 1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
-.clearfix:after {
-    height: 0;
-    clear: both;
-    display: block;
-    content: '';
-}
+
 #header {
     height: 87px;
     position: relative;
@@ -421,8 +420,8 @@ a {
 .con ul li {
     width: 245px;
     height: 407px;
-    float: left;
-    margin-right: 15px;
+    //float: left;
+    //margin-right: 15px;
     margin-bottom: 15px;
     position: relative;
     overflow: hidden;
