--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,76 +57,54 @@
 						<ul>
 							<li>
 								<div class="img">
-									<a href=""><img src="img/news1.jpg"></a>
+									<a href=""><img src="img/eye3D.png"></a>
 								</div>
 								<div class="listtit">
 									<a href="">
-										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
-										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
-										<div><span>2016-6-8</span></div>
+										<h3>裸眼3D投影——距全息技术更进一步</h3>
+										<p>这款投影仪的核心是液晶调节器的一对平面显示屏。以特定的角度利用光学原理形成3D影像，这种影像能随着观众观影角度的变化而变化。调节器以240次/秒的速度更新画面。</p>
+										<div><span>2016-7-20</span></div>
 									</a>
 								</div>
 							</li>
 							<li>
 								<div class="img">
-									<a href=""><img src="img/news1.jpg"></a>
+									<a href=""><img src="img/namixibao.png"></a>
 								</div>
 								<div class="listtit">
 									<a href="">
-										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
-										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
-										<div><span>2016-6-8</span></div>
+										<h3>能装进一个细胞中的纳米发动机</h3>
+										<p>德克萨斯大学的Cockrell工程学院制作出了世界上体积最小、速度最快、运行时间最长的纳米发动机。</p>
+										<div><span>2016-7-18</span></div>
 									</a>
 								</div>
 							</li>
 							<li>
 								<div class="img">
-									<a href=""><img src="img/news1.jpg"></a>
+									<a href=""><img src="img/virtualGame.png"></a>
 								</div>
 								<div class="listtit">
 									<a href="">
-										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
-										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
-										<div><span>2016-6-8</span></div>
+										<h3>多人虚拟现实游戏——真正的身临其境</h3>
+										<p>
+											Zero Latency开发虚拟现实技术，可以将用户和肢体动作映射到游戏场景中，从而进行多人虚拟现实游戏。
+										</p>
+										<div><span>2016-7-8</span></div>
 									</a>
 								</div>
 							</li>
 							<li>
 								<div class="img">
-									<a href=""><img src="img/news1.jpg"></a>
+									<a href=""><img src="img/blood.png"></a>
 								</div>
 								<div class="listtit">
 									<a href="">
-										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
-										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
-										<div><span>2016-6-8</span></div>
+										<h3>可环绕在血管周围的电路板</h3>
+										<p>德克萨斯大学达拉斯分校的研究团队制作出了一种薄膜晶体管，它足够柔韧，可以环绕在神经元和血管周围。</p>
+										<div><span>2016-6-18</span></div>
 									</a>
 								</div>
-							</li>
-							<li>
-								<div class="img">
-									<a href=""><img src="img/news1.jpg"></a>
-								</div>
-								<div class="listtit">
-									<a href="">
-										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
-										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
-										<div><span>2016-6-8</span></div>
-									</a>
-								</div>
-							</li>
-							<li>
-								<div class="img">
-									<a href=""><img src="img/news1.jpg"></a>
-								</div>
-								<div class="listtit">
-									<a href="">
-										<h3>希拉里赢初选几无悬念 桑德斯或独立参选</h3>
-										<p>那么，特朗普、希拉里、桑德斯，谁将在收官之战之后登上美国总统竞选的终极擂台，谁又最有可能成为白宫新主?</p>
-										<div><span>2016-6-8</span></div>
-									</a>
-								</div>
-							</li>
+							</li>				
 						</ul>
 					</div>
 				</div>
