--- a/public/less/businessIntro.less
+++ b/public/less/businessIntro.less
@@ -52,11 +52,13 @@
   -webkit-flex: 4;
   background-color: #fff;
   padding: 30px 100px;
-}
-.right-content{
   p{
     text-indent: 24px;
     line-height: 20px;
     color: #646464;
+    font-size: 16px;
+  }
+  h2{
+    text-align: center;
   }
 }
