--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
 		</div>
 		
 		<!-- 轮播图  E  -->
-		<div class="main_top clearfix">
+		<div class="main_top clearfix2">
 			<div class="aboutus">
 				<div class="title">公司简介</div>
 				<div class="content">
@@ -117,7 +117,7 @@
 			</div>
 			<div class="subtitle">眼见为实，我们做的每一份都有记录，让客户亲眼见证质量，不忘初心的企业理念</div>
 			<div class="con">
-				<ul class="clearfix">
+				<ul class="clearfix2">
 					<li>
 						<img src="img/pinghetangAPP.jpg" />
 						<div class="txt">
