--- a/public/css/businessIntro.css
+++ b/public/css/businessIntro.css
@@ -55,4 +55,8 @@
   text-indent: 24px;
   line-height: 20px;
   color: #646464;
+  font-size: 16px;
+}
+.right-content h2 {
+  text-align: center;
 }
