--- a/public/css/common.css
+++ b/public/css/common.css
@@ -29,6 +29,10 @@ a {
 .clearfix {
   zoom: 1;
   display: flex;
+}
+.clearfix2 {
+  zoom: 1;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
