--- a/public/less/common.less
+++ b/public/less/common.less
@@ -13,12 +13,16 @@ ul li {
 a {
     text-decoration: none;
 }
-.clearfix {
+.clearfix{
     zoom: 1;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+}
+.clearfix2 {
+      zoom: 1;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-around;
 }
 
 #header {
