--- a/public/less/businessIntro.less
+++ b/public/less/businessIntro.less
@@ -52,6 +52,9 @@
   -webkit-flex: 4;
   background-color: #fff;
   padding: 30px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   p{
     text-indent: 24px;
     line-height: 20px;
