--- a/routes/information/inform/front.ejs
+++ b/routes/information/inform/front.ejs
@@ -1,8 +1,9 @@
-<h2>互联网大数据支撑生态银行建设</h2>
+
+<div>
+        <h2>互联网大数据支撑生态银行建设</h2>
         <p>在很多商业银行的绿色金融还停留在传统贴息贷款的模式之际，以互联网生态大数据为支撑的生态银行概念已经呼之欲出了，最为难得的是，新的理念摒弃了绿色金融只能依赖于公益发展的观点，强调了自然资源作为稀缺资本，应该建立在盈利基础上，兼顾长远发展的理念。
         </p>
-        <p>“真正的绿色金融体系一旦成立起来，应该：第一，鼓励好的企业向更好的方向发展，企业要更具有社会责任，能够在环境等多个方面有所担当；第二，必须要对企业促进生态环境健康发展的行为进行量化和评估，借助自然资本和生态大数据，使企业自己的价值获得提升，也为股东也创造价值，同时为金融服务创造价值”，德稻集团董事局主席李卓智对《证券日报》记者独家表示，“以A股第一高价股贵州茅台为例，茅台酒并不是水加酒精，而是生态的产品，依赖好的自然资源产出的，所以它的市值中很大一部分(90%)来自于自然资本。”</p>
-　　
+        <p>“真正的绿色金融体系一旦成立起来，应该：第一，鼓励好的企业向更好的方向发展，企业要更具有社会责任，能够在环境等多个方面有所担当；第二，必须要对企业促进生态环境健康发展的行为进行量化和评估，借助自然资本和生态大数据，使企业自己的价值获得提升，也为股东也创造价值，同时为金融服务创造价值”，德稻集团董事局主席李卓智对《证券日报》记者独家表示，“以A股第一高价股贵州茅台为例，茅台酒并不是水加酒精，而是生态的产品，依赖好的自然资源产出的，所以它的市值中很大一部分(90%)来自于自然资本。”</p>　
         <p>市场需要多维度估值</p>
         <p>自然资本比重高</p>
         <p>对于投资者而言，资本的强悍显然不言而喻，但自然资本对于他们中的绝大多数还是一个新鲜的词汇。《证券日报》记者近日在多方采访中了解到，除了传统意义上的财务报表，从非财务价值角度对于上市公司的估值也正受到越来越多的关注。</p>
@@ -19,3 +20,5 @@
         <p>第三，借助互联网，将自然资本的核算体系模型放到网络上，为各级政府提供方便，让各地政府自己核算本区域的自然资本价值，了解本区域的自然资源和生态系统的价值。</p>
         <p>第四，大数据还可以给有意推广绿色金融服务的金融机构提供数据，帮助他们筛查到有价值的企业，让金融机构来服务这些优质的、负责任的企业。</p>
         <p>在国资委商业科技质量中心研究员罗天昊看来，“有数据，无争议”。他认为，“借助大数据评估生态系统变化带来的商机与风险，可以形成绿色金融的基础。为个人、企业和当地政府提供投资、融资渠道，以及各种绿色金融产品组合形式，推动社会资本参与的自然资本投资模式。在企业、个人和政府间共同分担环境治理责任，是未来新经济的两大核心。”</p>
+
+</div>
