--- a/views/drycargo.ejs
+++ b/views/drycargo.ejs
@@ -13,12 +13,22 @@
 
 <body>
 <%include header.ejs%>
-<div></div>
+
+<div class="flexslider">
+    <ul class="slides">
+
+        <li style="background:url(img/banner.jpg) center 0 no-repeat;">
+            <a href="#"></a>
+        </li>
+
+    </ul>
+</div>
+
 <div class="business-content">
     <div class="left-content">
         <ul>
-            <li class="business selected"  data-tag="case"><a href="javascript:void(0)">案例</a></li>
-            <li class="business " data-tag="cooperation"><a href="javascript:void(0)">合作</a></li>
+            <li class="business selected"  data-tag="case"><a href="javascript:void(0)">案例展示</a></li>
+            <li class="business " data-tag="cooperation"><a href="javascript:void(0)">合作伙伴</a></li>
         </ul>
     </div>
     <div class="right-content">
