--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,8 +3,7 @@
         <div class="left">
             <p>
                 <span class="contact-us hide">
-                    联系电话：4008-821628<br />
-                    企业邮箱：。。。
+                    联系电话：刘同学 13534231397<br />
                 </span>
                 <a href="javascript:void(0)" class="contacts">联系我们</a> <span></span>
                 <a href="/business">伙伴加入 </a> <span></span>
