--- a/views/businessIntro.ejs
+++ b/views/businessIntro.ejs
@@ -11,7 +11,17 @@
 
 	<body>
 		<%include header.ejs%>
-		<div></div>
+
+		<div class="flexslider">
+			<ul class="slides">
+
+				<li style="background:url(img/banner.jpg) center 0 no-repeat;">
+					<a href="#"></a>
+				</li>
+
+			</ul>
+		</div>
+
 		<div class="business-content">
 			<div class="left-content">
 				<ul>
@@ -23,13 +33,14 @@
 				</ul>
 			</div>
 			<div class="right-content">
-				<p>深圳歪创网络科技有限公司，简称歪创科技(<a href="http://www.yycon.cn">www.yycon.cn</a>)，是国内极具创新的互联网综合运营服务提供商，歪创科技是致力于网络应用技术开发与服务、企业电子商务整体解决方案的高科技企业。经过长期的稳步发展，已成为华南地区网络应用技术服务的佼佼者，在业界拥有良好的口碑，公司致力于打造专业互联网营销服务商和分类信息服务平台，为竭力成为深圳乃至全国的品牌互联网公司而努力。</p>
-				<p>服务范围：网络营销及企业信息化整体解决方案，包括：域名注册、虚拟主机、主机托管、网站建设、系统软件开发、网络网站维护、网站推广、网站优化、网络广告、电子商务咨询、服务器租用及托管服务等，区域范围涉及全国。</p>
-				<p>合作伙伴：万网、长沙电信、深圳企业网、百度、众多金融企业等。</p>
-				<p>企业优势：公司拥有国际国内领先的技术、完善的项目管理体系、质量管理体系和优秀的软硬件开发队伍（YCON TEAM；ISUNFIRE TEAM），以及专业的销售和服务团队，始终坚持“以客户为中心”的态度、以“互惠互利”为原则，以实际行动在深圳互联网界内赢得信任和美誉。</p>
-                <p>多年来,我们全心全意致力于品牌网站设计、系统软件开发、APP定制,在深圳互联网行业中有一定的知名度。我们拥有独立的高端服务器，提供从网站设计、网站推广、网络广告、软件定制及APP建设等互联网相关服务。网站设计案例涉及机械、医药、卫生、建筑、 IT 、纺织、娱乐、物流、咨询、房产、汽车等，从而积累了丰富的网络服务经验。</p>
-                <p>歪创随时欢迎您的咨询与合作，只做您想要的！愿大家能携手共进,创造出一个个辉煌。</p>
-
+				<div>
+					<p>深圳歪创网络科技有限公司，简称歪创科技(<a href="http://www.yycon.cn">www.yycon.cn</a>)，是国内极具创新的互联网综合运营服务提供商，歪创科技是致力于网络应用技术开发与服务、企业电子商务整体解决方案的高科技企业。经过长期的稳步发展，已成为华南地区网络应用技术服务的佼佼者，在业界拥有良好的口碑，公司致力于打造专业互联网营销服务商和分类信息服务平台，为竭力成为深圳乃至全国的品牌互联网公司而努力。</p>
+					<p>服务范围：网络营销及企业信息化整体解决方案，包括：域名注册、虚拟主机、主机托管、网站建设、系统软件开发、网络网站维护、网站推广、网站优化、网络广告、电子商务咨询、服务器租用及托管服务等，区域范围涉及全国。</p>
+					<p>合作伙伴：万网、长沙电信、深圳企业网、百度、众多金融企业等。</p>
+					<p>企业优势：公司拥有国际国内领先的技术、完善的项目管理体系、质量管理体系和优秀的软硬件开发队伍（YCON TEAM；ISUNFIRE TEAM），以及专业的销售和服务团队，始终坚持“以客户为中心”的态度、以“互惠互利”为原则，以实际行动在深圳互联网界内赢得信任和美誉。</p>
+					<p>多年来,我们全心全意致力于品牌网站设计、系统软件开发、APP定制,在深圳互联网行业中有一定的知名度。我们拥有独立的高端服务器，提供从网站设计、网站推广、网络广告、软件定制及APP建设等互联网相关服务。网站设计案例涉及机械、医药、卫生、建筑、 IT 、纺织、娱乐、物流、咨询、房产、汽车等，从而积累了丰富的网络服务经验。</p>
+					<p>歪创随时欢迎您的咨询与合作，只做您想要的！愿大家能携手共进,创造出一个个辉煌。</p>
+				</div>
 			</div>
 		</div>
 	<%include footer.ejs%>
