--- a/views/index.ejs
+++ b/views/index.ejs
@@ -177,6 +177,17 @@
 			</div>
 		</div>
 
+		<div class="together">
+			<div class="logo">
+				<img src="img/logo.jpg">
+			</div>
+			<div class="together_bottom">
+				<p>中国科学院合作伙伴单位</p>
+				<p>中国信息产业集团合作伙伴</p>
+			</div>
+
+		</div>
+
 	</body>
 	<script src="js/jquery.flexslider-min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/index/index.js" type="text/javascript" charset="utf-8"></script>
