--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,3 +8,27 @@ h6 {
   font-weight: 400;
   font-family: "Microsoft YaHei";
 }
+.together {
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  position: fixed;
+  left: 20px;
+  top: 200px;
+  z-index: 10;
+  background-color: #fff;
+  justify-content: center;
+  text-align: center;
+}
+.together img {
+  width: 90%;
+}
+.together .together_bottom {
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  padding: 0 20px;
+}
+.together .together_bottom p {
+  font-size: 14px;
+}
