--- a/public/less/index.less
+++ b/public/less/index.less
@@ -3,3 +3,29 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   font-family: "Microsoft YaHei";
 }
+
+.together{
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  position: fixed;
+  left: 20px;
+  top: 200px;
+  z-index: 10;
+  background-color: #fff;
+  justify-content: center;
+  text-align: center;
+  img{
+    width: 90%;
+  }
+
+  .together_bottom{
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    padding: 0 20px;
+    p{
+      font-size: 14px;
+    }
+  }
+}
