--- a/views/drycargo.ejs
+++ b/views/drycargo.ejs
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>歪创科技</title>
+    <meta name="keywords" content="深圳专业建站 网站建设 App开发 软件开发 深圳软件开发 全网营销"/>
+    <title>歪创科技-专业的建站服务</title>
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/businessIntro.css" />
     <link rel="stylesheet" type="text/css" href="css/drycargo.css" />
