--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,22 +17,13 @@
 		<!-- 轮播图  S  -->
 		<div class="flexslider">
 			<ul class="slides">
-				<li style="background:url(img/banner.jpg) center 0 no-repeat;">
+				<li style="background:url(img/product_desc.png) center 0 no-repeat;">
 					<a href="#"></a>
 				</li>
-				<li style="background:url(img/banner1.jpg) center 0 no-repeat;">
+				<li style="background:url(img/productDesc.png) center 0 no-repeat;">
 					<a href="#"></a>
 				</li>
-				<li style="background:url(img/banner2.jpg) center 0 no-repeat;">
-					<a href="#"></a>
-				</li>
-				<li style="background:url(img/banner7.png) center 0 no-repeat;">
-					<a href="#"></a>
-				</li>
-				<li style="background:url(img/banner6.png) center 0 no-repeat;">
-					<a href="#"></a>
-				</li>
-				<li style="background:url(img/banner5.jpg) center 0 no-repeat;">
+				<li style="background:url(img/banner_new.jpg) center 0 no-repeat;">
 					<a href="#"></a>
 				</li>
 			</ul>
