--- a/views/service.ejs
+++ b/views/service.ejs
@@ -17,7 +17,7 @@
 <div class="flexslider">
     <ul class="slides">
 
-        <li style="background:url(img/banner.jpg) center 0 no-repeat;">
+        <li style="background:url(img/sonpic.png) center 0 no-repeat;">
             <a href="#"></a>
         </li>
 
