--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -18,7 +18,7 @@
             <p class="img-code-desc">
                 <strong>歪创科技</strong><br />技术领先<br />品质保证
             </p>
-            <!--<img src="img/code.jpg" />-->
+            <img class="url-img" src="img/web-url.png" alter="官网二维码" title="官网二维码"/>
         </div>
     </div>
 </div>
