--- a/views/index.ejs
+++ b/views/index.ejs
@@ -169,7 +169,7 @@
 			</div>
 		</div>
 
-		<div class="together">
+		<!--<div class="together">
 			<div class="logo">
 				<img src="img/logo.jpg">
 			</div>
@@ -178,7 +178,7 @@
 				<p>中国信息产业集团合作伙伴</p>
 			</div>
 
-		</div>
+		</div>-->
 
 	</body>
 	<script src="js/jquery.flexslider-min.js" type="text/javascript" charset="utf-8"></script>
